# music-pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  rename-files copy.yml  rename-files.yml
src/rename_pipeline/: drive_handler.py  main.py  rename_pipeline.py  renamer.py
src/your_package/: rename.py  rename_pipeline.py
tests/: test_drive_handler.py  test_rename_pipeline.py  test_rename_pipeline_mocked.py
