[tool.poetry]
name = "rename-drive-pipeline"
version = "0.1.0"
description = "Rename and move music files from Google Drive using metadata via GitHub Actions"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "rename_pipeline", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
mutagen = "^1.47.0"
google-api-python-client = "^2.126.0"
google-auth = "^2.29.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
