[tool.poetry]
name = "music-pipeline"
version = "0.1.0"
description = "A tool for renaming music files using metadata and integrating with Google Drive."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "rename_pipeline", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
mutagen = "^1.47.0"
pydrive2 = "^1.16.0"
pydrive = "^1.3.1"
google-api-python-client = "^2.177.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.10.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=rename_pipeline --cov-report=term-missing"
testpaths = ["tests"]